--- a/src/components/App/index.module.css
+++ b/src/components/App/index.module.css
@@ -3,4 +3,13 @@
   min-width: 400px;
   height: 100%;
   display: flex;
+  flex-direction: column;
 }
+
+.settings {
+  padding-bottom: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
+
